--- a/less/_variables.less
+++ b/less/_variables.less
@@ -2,9 +2,13 @@
 
 // COLORS:
 
-@main-color: #cab68e; /* main Beige color */
-@second-color: #e0d4bc; /* secondary Beige color */
-@main-text: @white; /* white color */
+/* @main-color: #cab68e;  main Beige color */
+/* @second-color: #333; secondary Beige color */
+/* @main-text: @white;  white color */
+@main-color: #191304;    /* main Brown almost Black color */
+@second-color: #ebcd86;  /* secondary Beige color */
+@main-text: @main-color; /* main Brown almost Black color */
+@title-text: #c89621;    /* light Mrown color */
 
 @white: #fff;
 @grey-3: #333;
