--- a/templates/index.jade
+++ b/templates/index.jade
@@ -87,7 +87,7 @@ html(lang='es')
             .clearfix
             .logo-block
                 img.logointro(src='img/dist/logos/jalofernandez-logo.svg', alt='Logotipo de Jalofernandez', title='Logotipo de Jalofernandez')
-                p Diseño y programación
+                p.logotext Diseño &amp; programación
           span.bl-icon.bl-icon-close
             i.fa.fa-close
         //-
@@ -164,7 +164,7 @@ html(lang='es')
             .clearfix
             .logo-block
                 img.logointro(src='img/dist/logos/jalofernandez-logo.svg', alt='Logotipo de Jalofernandez', title='Logotipo de Jalofernandez')
-                p Diseño y programación
+                p.logotext Diseño &amp; programación
           span.bl-icon.bl-icon-close
             i.fa.fa-close
         //-
@@ -227,7 +227,7 @@ html(lang='es')
                   img(src='img/dist/merchan/17.png', alt='')
             .logo-block
                 img.logointro(src='img/dist/logos/jalofernandez-logo.svg', alt='Logotipo de Jalofernandez', title='Logotipo de Jalofernandez')
-                p Diseño y programación
+                p.logotext Diseño &amp; programación
           span.bl-icon.bl-icon-close
             i.fa.fa-close
         //-
@@ -246,7 +246,7 @@ html(lang='es')
             p Madrid, Spain
             p.contact-phone
               a(href='tel:696682791', title='Llamar a Jalofernandez') (+0034) 696 682 791
-            p
+            p.contact-socialmedia
               a(href='https://www.facebook.com/jalofernandez?ref=tn_tnmn', target="_blank", title='Ir al perfil de Facebook de Jalofernandez')
                 i.fa.fa-facebook
               a(href='http://instagram.com/jalofernandez?ref=badge', target="_blank", title='Ir al perfil de Instagram de Jalofernandez')
@@ -260,7 +260,7 @@ html(lang='es')
               a(href='mailto:jalofernandez@gmail.com', title='Escribir email a Jalofernandez')
                 i.fa.fa-envelope-o
             img.logointro(src='img/dist/logos/jalofernandez-logo.svg', alt='Logotipo de Jalofernandez', title='Logotipo de Jalofernandez')
-            p Diseño y programación
+            p.logotext Diseño &amp; programación
           span.bl-icon.bl-icon-close
             i.fa.fa-close
         //-
