--- a/less/_variables.less
+++ b/less/_variables.less
@@ -5,10 +5,10 @@
 /* @main-color: #cab68e;  main Beige color */
 /* @second-color: #333; secondary Beige color */
 /* @main-text: @white;  white color */
-@main-color: #191304;    /* main Brown almost Black color */
-@second-color: #ebcd86;  /* secondary Beige color */
-@main-text: @main-color; /* main Brown almost Black color */
-@title-text: #c89621;    /* light Mrown color */
+@main-color: #1e0a02;       /* main Orange almost Black color */
+@second-color: #f35e1a;     /* Flame Orange secondary color */
+@main-text: @main-color;    /* main Brown almost Black color */
+@title-text: #f68b5b; /* Medium Orange third color */
 
 @white: #fff;
 @grey-3: #333;
