--- a/templates/index.pug
+++ b/templates/index.pug
@@ -23,8 +23,10 @@ html(lang='es')
         section.section-one
           .bl-box.bl-white
             img.logointro(src='img/dist/logos/jalofernandez-logo.svg', alt='Logotipo de Jalofernandez', title='Logotipo de Jalofernandez')
-            h2.main-title jalofernández
-            h1 all graphics, websites & beyond!
+            h2.main-title 
+                span @
+                | jalofernández
+            h1 All graphics, websites & beyond!
           .bl-content
             h2 Sobre mi:
             p
