--- a/less/style.less
+++ b/less/style.less
@@ -674,11 +674,11 @@ div.bl-panel-items {
         .upper;
         margin-top: 0;
         color: @main-color;
-        font-size: 30px;
+        font-size: 33px;
         // text-transform: uppercase;
         letter-spacing: 0.03em;
         position: relative;
-        bottom: 22px;
+        bottom: 18px;
         -webkit-transition: all 0.2s ease-in-out;
         -moz-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
@@ -697,7 +697,8 @@ div.bl-panel-items {
             .text-shadow;
             
             span {
-                opacity: .5;
+                color: @title-text;
+                // opacity: .5;
             }
         }
     }
