--- a/templates/index.jade
+++ b/templates/index.jade
@@ -8,7 +8,13 @@ html(lang='es')
     meta(name='description', content='')
     meta(name='keywords', content='')
     meta(name='author', content='')
-    link(rel='shortcut icon', href='img/dist/favicon/favicon.ico')
+    //- Custom Favicon
+    link(rel="apple-touch-icon", sizes="180x180", href="img/dist/favicon/apple-touch-icon.png")
+    link(rel="icon", type="image/png", href="img/dist/favicon/favicon-32x32.png", sizes="32x32")
+    link(rel="icon", type="image/png", href="img/dist/favicon/favicon-16x16.png", sizes="16x16")
+    link(rel="manifest", href="img/dist/favicon/manifest.json")
+    link(rel="mask-icon", href="img/dist/favicon/safari-pinned-tab.svg", color="#f35e1a")
+    meta(name="theme-color", content="#ffffff")
     //- Custom Styles
     link(rel='stylesheet', type='text/css', href='css/dist/style.css')
     //- Modernizr javascript
