--- a/css/sources/style.css
+++ b/css/sources/style.css
@@ -6,6 +6,8 @@
 /* Flame Orange secondary color */
 /* main Brown almost Black color */
 /* Medium Orange third color */
+/* @bg-btn: rgba(246,139,91,.8);  Medium Orange with opacity */
+/* Medium Orange with opacity */
 /* --- common FONTS -------------------------------- */
 @import "font-awesome.css";
 @import url('https://fonts.googleapis.com/css?family=Parisienne|Quicksand|Raleway:400,600,700');
@@ -70,7 +72,7 @@ body {
   height: 3px;
 }
 ::-webkit-scrollbar-thumb {
-  background: #f35e1a;
+  background: #f68b5b;
   border: 0px none #fff;
   border-radius: 10px;
 }
@@ -491,6 +493,10 @@ div.bl-panel-items nav span.bl-next-work {
 div.bl-panel-items.bl-panel-items-show nav {
   opacity: 1;
   top: -70px;
+  background-color: rgba(30, 10, 2, 0.8);
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  color: #f35e1a;
 }
 div.bl-panel-items.bl-panel-items-show nav span {
   float: left;
@@ -562,7 +568,7 @@ div.bl-panel-items.bl-panel-items-show nav span {
   font-family: 'Quicksand', sans-serif;
   letter-spacing: 3px;
   margin-top: 0;
-  color: #1e0a02;
+  color: #361204;
   font-size: 33px;
   letter-spacing: 0.03em;
   position: relative;
@@ -684,6 +690,9 @@ section.section-four .bl-content {
   }
   .bl-icon-close {
     top: 10px;
+    float: right !important;
+    font-size: 25px;
+    padding-right: 5px;
   }
   .bl-box h1 {
     font-size: 16px;
@@ -699,6 +708,6 @@ section.section-four .bl-content {
 }
 @media screen and (max-height: 780px) {
   .bl-box h1 {
-    bottom: 12px;
+    bottom: 5px;
   }
 }
